# attest

./: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  task.md
.github/workflows/: attest.yml  ci.yml
attest-rs/: Cargo.toml
attest-rs/src/: ffi.rs  lib.rs  zk.rs
attest-rs/src/cloud/: adapter.rs
attest-rs/src/persist/: audit.rs
attest-rs/src/runtime/: hashing.rs  intent.rs  interceptor.rs  keystore_provider.rs  mod.rs  network.rs  noise.rs  policy.rs  tpm_parser.rs  tpm_verifier.rs  vep.rs
cmd/: agent.go  attest.go  cost.go  exec.go  git.go  guardrails.go  hardware.go  identity.go  init.go  intent.go  policy.go  quantum.go  query.go  rollback.go  root.go  verify.go  watch.go
docs/: architecture.md
internal/db/: guardrails_db.go
internal/integrations/: autogen.go  crewai.go  langchain.go  llamaindex.go
pkg/: attest_test.go
pkg/attestation/: attestation.go  attestation_test.go
pkg/bridge/: bridge.go  bridge_nocgo.go  bridge_test.go  cgo_disabled.go  cgo_enabled.go  config_debug.go  config_release.go  config_windows.go
pkg/cost/: middleware.go
pkg/exec/: executor.go
pkg/guardrails/: checkpoint.go  interceptor.go  manager.go
pkg/identity/: agent.go
pkg/intent/: intent.go
pkg/storage/: db.go  intent_store.go
vex-hardware/: Cargo.toml
vex-hardware/src/: id.rs  keystore.rs  lib.rs  tpm.rs  traits.rs
